# context-config

./: .bumpversion.cfg  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
context_config/: __init__.py  context_config.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_context_config.py
