[tool]
[tool.poetry]
name = "context_config"
version = "0.1.0"
homepage = "https://github.com/jmosbacher/context_config"
description = "Top-level package for context-config."
authors = ["Yossi Mosbacher <joe.mosbacher@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "context_config" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
intervaltree = "^3.1.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
isort = "*"
pylint = "*"
dephell = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"
sphinx-material = "*"
nbsphinx = "*"
poethepoet = "*"



[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
versioning = "semver"
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
